feat: se añaden estadisticas en la pagina de dashboard

--- a/src/views/pages/start.html
+++ b/src/views/pages/start.html
@@ -44,58 +44,69 @@
         <div class="container-fluid p-5">
             <h4 class="mb-4">Estadísticas</h4>
             <div class="row g-4">
-                <div class="col-md-4">
-                    <a href="usuarios.html" class="text-decoration-none">
+                <div class="col-md-12">
+                    <a href="start.html" class="text-decoration-none">
                         <div class="card-metric bg-white">
                             <div>
-                                <div class="card-title">Usuarios Creados</div>
-                                <div class="card-value" id="usuarios-count">0</div>
+                                <div class="card-title">Usuarios Activos</div>
+                                <div class="card-value" id="usuariosActivos">0</div>
                             </div>
                             <i class="bi bi-people-fill card-icon"></i>
                         </div>
                     </a>
                 </div>
-                <div class="col-md-4">
-                    <a href="tickets.html" class="text-decoration-none">
+                <div class="col-md-6">
+                    <a href="start.html" class="text-decoration-none">
                         <div class="card-metric bg-white">
                             <div>
                                 <div class="card-title">Tickets Totales</div>
-                                <div class="card-value" id="tickets-count">0</div>
+                                <div class="card-value" id="ticketsTotales">0</div>
                             </div>
                             <i class="bi bi-ticket-detailed-fill card-icon"></i>
                         </div>
                     </a>
                 </div>
-                <div class="col-md-4">
-                    <a href="tickets.html" class="text-decoration-none">
+                <div class="col-md-6">
+                    <a href="start.html" class="text-decoration-none">
                         <div class="card-metric bg-white">
                             <div>
-                                <div class="card-title">Tickets Abiertos</div>
-                                <div class="card-value" id="abiertos-count">0</div>
+                                <div class="card-title">Tickets Nuevos</div>
+                                <div class="card-value" id="ticketsNuevos">0</div>
                             </div>
                             <i class="bi bi-inbox card-icon"></i>
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6">
-                    <a href="tickets.html" class="text-decoration-none">
+                <div class="col-md-4">
+                    <a href="start.html" class="text-decoration-none">
                         <div class="card-metric bg-white">
                             <div>
-                                <div class="card-title">Tickets Cerrados</div>
-                                <div class="card-value" id="cerrados-count">0</div>
+                                <div class="card-title">Tickets En Proceso</div>
+                                <div class="card-value" id="ticketsEnProcesos">0</div>
+                            </div>
+                            <i class="bi bi-exclamation-triangle-fill card-icon"></i>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="start.html" class="text-decoration-none">
+                        <div class="card-metric bg-white">
+                            <div>
+                                <div class="card-title">Tickets Resueltos</div>
+                                <div class="card-value" id="ticketsResueltos">0</div>
                             </div>
                             <i class="bi bi-check-circle-fill card-icon"></i>
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6">
-                    <a href="tickets.html" class="text-decoration-none">
+                <div class="col-md-4">
+                    <a href="start.html" class="text-decoration-none">
                         <div class="card-metric bg-white">
                             <div>
-                                <div class="card-title">Tickets Urgentes</div>
-                                <div class="card-value" id="urgentes-count">0</div>
+                                <div class="card-title">Tickets Cerrados</div>
+                                <div class="card-value" id="ticketsCerrados">0</div>
                             </div>
-                            <i class="bi bi-exclamation-triangle-fill card-icon"></i>
+                            <i class="bi bi-check-circle-fill card-icon"></i>
                         </div>
                     </a>
                 </div>
