--- a/src/views/pages/detalle_ticket.html
+++ b/src/views/pages/detalle_ticket.html
@@ -33,13 +33,8 @@
             <div class="text-center">
                 <img src="../../assets/img/logo.png" alt="Logo" class="mb-4 mt-4" width="120px">
             </div>
-            <div class="px-3">
-                <a href="start.html"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
-                <a href="bot.html"><i class="bi bi-robot me-2"></i>Base de Conocimiento (Bot)</a>
-                <a href="tickets.html" class="active"><i class="bi bi-ticket-detailed me-2"></i>Tickets</a>
-                <a href="categorias.html"><i class="bi bi-tags me-2"></i>Categorías</a>
-                <a href="usuarios.html"><i class="bi bi-people me-2"></i>Usuarios</a>
-                <a href="roles.html"><i class="bi bi-person-badge me-2"></i>Roles</a>
+            <div id="menuContainer" class="px-3">
+                <!-- empty -->
             </div>
         </div>
         <div class="container-fluid p-5">
