feat: se añade filtrado de tickets y se bloquea si el rol no es super admin o admin

--- a/src/views/pages/detalle_ticket.html
+++ b/src/views/pages/detalle_ticket.html
@@ -46,7 +46,7 @@
 
                 <div class="d-flex flex-column flex-md-row gap-2" style="max-width: 500px; width: 100%;">
                     <button class="btn btn-secondary w-100 w-md-auto" data-bs-toggle="modal"
-                            data-bs-target="#modalAsignarAgente">
+                            data-bs-target="#modalAsignarAgente" id="btnReasignar">
                         <i class="bi bi-person-circle me-2"></i>Re asignar agente
                     </button>
                     <a href="tickets.html" class="btn btn-secondary w-100 w-md-auto">
